# reactrix-store

./: .env  .envrc  Cargo.toml  README.md  Rocket.toml  k8s.yaml
migrations/2019-10-16-162643_setup/: up.sql
migrations/2020-01-04-133624_datastore/: down.sql  up.sql
src/: datastore.rs  eventstore.rs  main.rs  mq.rs
src/datastore/: mongo.rs  postgres.rs
src/eventstore/: mongo.rs  postgres.rs
