[package]
name = "reactrix-store"
version = "0.1.0"
authors = ["Alexander Dorn <ad@sodosopa.io>"]
edition = "2018"

[dependencies]
reactrix = { path = "../reactrix" }
serde_json = "1.0"
rmp-serde = "0.14"
zmq = "0.9"
log = "0.4"
exitfailure = "0.5"
dotenv = "0.14"
env_logger = "0.7"
sodiumoxide = "0.2"
structopt = "0.2"
hex = "0.4"
failure = "0.1"
blake2 = "0.8"
warp = "0.2"
mongodb = "0.10"
url = "2.1"
bytes = "0.5"
futures = "0.3"
chrono = "0.4"

[dependencies.bson]
version = "0.14"
features = ["u2i"]

[dependencies.r2d2]
version = ">= 0.8, < 0.9"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "0.2"
features = ["macros"]

[dependencies.diesel]
version = "1.4"
features = ["serde_json", "chrono", "postgres", "r2d2"]
